--- a/rust.html
+++ b/rust.html
@@ -24,7 +24,7 @@
 		</object>
 		<br/><b><font color="crimson">your browser does not support the video tag, too bad<br/></font></b>
 	</video>
-	<h1>IMATTATOUCH</h1>
+	<h1>IMATTATIEM</h1>
 </body>
 </html>
 
